--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  
   "name": "didtaskv2",
   "version": "1.0.0",
   "description": "",
@@ -24,6 +25,7 @@
     "@polkadot/ui-keyring": "^3.4.1",
     "@polkadot/util-crypto": "^12.2.1",
     "@svgr/webpack": "^8.0.1",
+    "@wagmi/chains": "^1.0.0",
     "@zcloak/dev": "^0.31.0",
     "@zcloak/service": "^0.8.1",
     "copy-to-clipboard": "^3.3.3",
@@ -35,7 +37,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
-    "socket.io-client": "^4.6.1"
+    "socket.io-client": "^4.6.1",
+    "viem": "^0.3.50",
+    "wagmi": "^1.1.0"
   },
   "devDependencies": {
     "assert": "^2.0.0",
