--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "repository": {
+    "url": "git+https://github.com/EdMasterNava/DIDtaskV2.git"
+  },
   "dependencies": {
     "@babel/core": "^7.22.1",
     "@babel/polyfill": "^7.12.1",
